Issue #17381: Fixed handling of case-insensitive ranges in regular expressions. Added new opcode RANGE_IGNORE.